fix: allow same-priority pre-emption for code completion requests
Signed-off-by: Akash Yadav <akashyadav@appdevforall.org>